--- a/CellScopeLoa/en.lproj/Localizable.strings
+++ b/CellScopeLoa/en.lproj/Localizable.strings
@@ -6,16 +6,9 @@
   Copyright (c) 2015 Fletcher Lab. All rights reserved.
 */
 
-/*
-"Connected" = "Connected";
-"Disconnected" = "Disconnected";
-"Test" = "Test";
-"Data" = "Data";
-"Settings" = "Settings";
-*/
-
 "Connected" = "Lié";
 "Disconnected" = "Coupé";
 "Test" = "Test";
 "Data" = "Données";
 "Settings" = "Paramètres";
+"Searching" = "Searching";
