--- a/CellScopeLoa/fr.lproj/Localizable.strings
+++ b/CellScopeLoa/fr.lproj/Localizable.strings
@@ -1,29 +1,24 @@
-/* 
-  EnglishDefault
-  CellScopeLoa
+/*
+ FrenchDefault
+ CellScopeLoa
+ 
+ Created by Matthew Bakalar on 5/17/15.
+ Copyright (c) 2015 Fletcher Lab. All rights reserved.
+ */
 
-  Created by Matthew Bakalar on 5/17/15.
-  Copyright (c) 2015 Fletcher Lab. All rights reserved.
-*/
-
-"Connected" = "Lié";
-"Disconnected" = "Coupé";
-"Test" = "Test";
-"Data" = "Données";
-"Settings" = "Paramètres";
-"Devices" = "Périphériques";
-"Cloud sync" = "Synchroniser";
+// Status messages
+"Connected" = "Connect√©";
+"Disconnected" = "Coup√©";
 "Searching" = "Recherche";
 
 // Error messages
-
-"Blood fill Error" = "Blood fill Error";
-"Bubbles are in the capillary or blood has coagulated." = "Bubbles are in the capillary or blood has coagulated.";
-"Focus Error" = "Focus Error";
-"Images are not in focus." = "Images are not in focus.";
-"Insuffient data" = "Insuffient data";
-"Low quality fields of view." = "Low quality fields of view.";
-"There are bubbles in the capillary." = "There are bubbles in the capillary.";
-"Test result is invalid" = "Test result is invalid";
-"High field of view variance" = "High field of view variance";
-"High capillary to capillary variance" = "High capillary to capillary variance";
+"Blood fill Error" = "Erreur de remplissage du capillaire";
+"Bubbles are in the capillary or blood has coagulated." = "Bulles dans le capillaire ou sang coagulé.";
+"Focus Error" = "Erreur de mise au point";
+"Images are not in focus." = "Mise au point incorrecte.";
+"Insuffient data" = "Données insuffisantes";
+"Low quality fields of view." = "Champs de lecture de mauvaise qualité.";
+"There are bubbles in the capillary." = "Il y a des bulles dans le capillaire.";
+"Test result is invalid" = "Résultat non valide";
+"High field of view variance" = "Variance importante entre les champs";
+"High capillary to capillary variance" = "Variance importante entre les capillaires";
