Fairly confident we are in good shape. This is the push before the merge with Mike D

--- a/CellScopeLoa/fr.lproj/Main.strings
+++ b/CellScopeLoa/fr.lproj/Main.strings
@@ -236,8 +236,8 @@
 /* Class = "UINavigationItem"; title = "Test"; ObjectID = "uex-Ho-rN5"; */
 "uex-Ho-rN5.title" = "Test";
 
-/* Class = "UILabel"; text = "Focus check:"; ObjectID = "viO-wV-r2H"; */
-"viO-wV-r2H.text" = "Focus check:";
+/* Class = "UILabel"; text = "Require two capillaries:"; ObjectID = "viO-wV-r2H"; */
+"viO-wV-r2H.text" = "Require two capillaries:";
 
 /* Class = "UINavigationItem"; title = "Capture"; ObjectID = "vri-SG-q0t"; */
 "vri-SG-q0t.title" = "Capture";
