Everything looks great so far

--- a/CellScopeLoa/Base.lproj/Localizable.strings
+++ b/CellScopeLoa/Base.lproj/Localizable.strings
@@ -26,3 +26,4 @@
 "Abort" = "Abort";
 "No" = "No";
 "Abort test?" = "Abort test?";
+"There is blood flow within the capillary." = "There is blood flow within the capillary.";
