--- a/CellScopeLoa/fr.lproj/Localizable.strings
+++ b/CellScopeLoa/fr.lproj/Localizable.strings
@@ -26,3 +26,4 @@
 "Abort" = "Avorter";
 "No" = "Non";
 "Abort test?" = "Abandonner le test?";
+"There is blood flow within the capillary." = "Il y a le flux sanguin à l'intérieur du capillaire";
